--- a/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
           onnxruntimeregistry.azurecr.io/internal/azureml/onnxruntimecentoscpubuild:ch9m \
             python3 /onnxruntime_src/tools/ci_build/build.py \
               --build_dir /build --cmake_generator Ninja \
-              --config Debug Release \
+              --config Release \
               --skip_submodule_sync \
               --build_shared_lib \
               --parallel \
@@ -39,7 +39,7 @@ jobs:
               --use_openmp \
               --enable_onnx_tests \
               --enable_symbolic_shape_infer_tests \
-              --enable_pybind --build_java --build_nodejs
+              --enable_pybind --build_java --build_nodejs --cmake_extra_defines -Donnxruntime_USE_VALGRIND=ON
       workingDirectory: $(Build.SourcesDirectory)
   - task: Docker@2
     displayName: logout
